--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -1299,23 +1299,23 @@
                                             <input class="form-check-input" name="headingIcon" id="noI" type="radio" value="noI" checked="">
                                             <label class="form-check-label text-white" for="noI">No icon</label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Clinical and Practical Skills Workshops">
                                             <input class="form-check-input" name="headingIcon" id="psw" type="radio" value="psw">
-                                            <label class="form-check-label" for="psw"><span class="uq-icon icon-psw-white bg-uq p-3"></span></label>
+                                            <label data-bs-tooltip="" class="form-check-label" for="psw"><span class="uq-icon icon-psw-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Clinical Plenary">
                                             <input class="form-check-input" name="headingIcon" id="clinical-plenary" type="radio" value="clinical-plenary">
                                             <label class="form-check-label" for="clinical-plenary"><span class="uq-icon icon-clinical-plenary-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()"  data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Clinical and Professional Learning">
                                             <input class="form-check-input" name="headingIcon" id="cpl" type="radio" value="cpl">
                                             <label class="form-check-label" for="cpl"><span class="uq-icon icon-cpl-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Immersion">
                                             <input class="form-check-input" name="headingIcon" id="immersion" type="radio" value="immersion">
                                             <label class="form-check-label" for="immersion"><span class="uq-icon icon-immersion-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Lectorial">
                                             <input class="form-check-input" name="headingIcon" id="lectorial" type="radio" value="lectorial">
                                             <label class="form-check-label" for="lectorial"><span class="uq-icon icon-lectorial-white bg-uq p-3"></span></label>
                                         </div>
@@ -1323,23 +1323,23 @@
                                 </div>
                                 <div class="row bg-uq p-4 rounded-bottom">
                                     <div class="col-lg d-flex justify-content-around">
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Masterclass">
                                             <input class="form-check-input" name="headingIcon" id="masterclass" type="radio" value="masterclass">
                                             <label class="form-check-label" for="masterclass"><span class="uq-icon icon-masterclass-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Practical">
                                             <input class="form-check-input" name="headingIcon" id="practical" type="radio" value="practical">
                                             <label class="form-check-label" for="practical"><span class="uq-icon icon-practical-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Symposium">
                                             <input class="form-check-input" name="headingIcon" id="symposium" type="radio" value="symposium">
                                             <label class="form-check-label" for="symposium"><span class="uq-icon icon-symposium-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Team Based Learning">
                                             <input class="form-check-input" name="headingIcon" id="tbl" type="radio" value="tbl">
                                             <label class="form-check-label" for="tbl"><span class="uq-icon icon-tbl-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Workshop">
                                             <input class="form-check-input" name="headingIcon" id="workshop" type="radio" value="workshop">
                                             <label class="form-check-label" for="workshop"><span class="uq-icon icon-workshop-white bg-uq p-3"></span></label>
                                         </div>
@@ -1458,23 +1458,23 @@
                                             <input class="form-check-input" name="headingIconVid" id="noIV" type="radio" value="noI" checked="">
                                             <label class="form-check-label text-white" for="noIV">No icon</label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Clinical and Practical Skills Workshops">
                                             <input class="form-check-input" name="headingIconVid" id="pswV" type="radio" value="psw">
                                             <label class="form-check-label" for="pswV"><span class="uq-icon icon-psw-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Clinical Plenary">
                                             <input class="form-check-input" name="headingIconVid" id="clinical-plenaryV" type="radio" value="clinical-plenary">
                                             <label class="form-check-label" for="clinical-plenaryV"><span class="uq-icon icon-clinical-plenary-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Clinical and Professional Learning">
                                             <input class="form-check-input" name="headingIconVid" id="cplV" type="radio" value="cpl">
                                             <label class="form-check-label" for="cplV"><span class="uq-icon icon-cpl-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Immersion">
                                             <input class="form-check-input" name="headingIconVid" id="immersionV" type="radio" value="immersion">
                                             <label class="form-check-label" for="immersionV"><span class="uq-icon icon-immersion-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Lectorial">
                                             <input class="form-check-input" name="headingIconVid" id="lectorialV" type="radio" value="lectorial">
                                             <label class="form-check-label" for="lectorialV"><span class="uq-icon icon-lectorial-white bg-uq p-3"></span></label>
                                         </div>
@@ -1482,23 +1482,23 @@
                                 </div>
                                 <div class="row bg-uq p-4 rounded-bottom">
                                     <div class="col-lg d-flex justify-content-around">
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Masterclass">
                                             <input class="form-check-input" name="headingIconVid" id="masterclassV" type="radio" value="masterclass">
                                             <label class="form-check-label" for="masterclassV"><span class="uq-icon icon-masterclass-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Practical">
                                             <input class="form-check-input" name="headingIconVid" id="practicalV" type="radio" value="practical">
                                             <label class="form-check-label" for="practicalV"><span class="uq-icon icon-practical-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Symposium">
                                             <input class="form-check-input" name="headingIconVid" id="symposiumV" type="radio" value="symposium">
                                             <label class="form-check-label" for="symposiumV"><span class="uq-icon icon-symposium-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Team Based Learning">
                                             <input class="form-check-input" name="headingIconVid" id="tblV" type="radio" value="tbl">
                                             <label class="form-check-label" for="tblV"><span class="uq-icon icon-tbl-white bg-uq p-3"></span></label>
                                         </div>
-                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                        <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Workshop">
                                             <input class="form-check-input" name="headingIconVid" id="workshopV" type="radio" value="workshop">
                                             <label class="form-check-label" for="workshopV"><span class="uq-icon icon-workshop-white bg-uq p-3"></span></label>
                                         </div>
@@ -2629,11 +2629,11 @@
                         </div>
                         <div class="form-check form-check-inline" id="readmoreHeadSize" onchange="generateReadmoreCode()">
                             <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSize2" type="radio" value="h4">
-                            <label class="form-check-label" for="readmoreHeadSize2"><h4 class="m-0">H4 heading</h4></label>
+                            <label class="form-check-label bg-info bg-opacity-25 p-2" for="readmoreHeadSize2"><h4 class="m-0">H4 heading</h4></label>
                         </div>
                         <div class="form-check form-check-inline" id="readmoreHeadSize" onchange="generateReadmoreCode()">
                             <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSize3" type="radio" value="h2">
-                            <label class="form-check-label" for="readmoreHeadSize3"><h2 class="m-0">H2 heading</h2></label>
+                            <label class="form-check-label bg-uq text-white p-2" for="readmoreHeadSize3"><h2 class="m-0">H2 heading</h2></label>
                         </div>
                         </div>
                         <hr>
