update heading input/heading size change

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -1348,17 +1348,17 @@
                                 <hr>
                                 <h5 class="font-weight-bold mt-3">Heading size <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="headSize" onchange="generateImgTextCode()">
-                                    <input class="form-check-input" name="headSize" id="headSizeNone" type="radio" value="noH" checked>
+                                    <input class="form-check-input" name="headSize" id="headSizeNone" type="radio" value="img-noH" checked>
                                     <label class="form-check-label" for="headSizeNone">No heading</label>
                                 </div>
                                 <div class="form-check form-check-inline" id="headSize" onchange="generateImgTextCode()">
-                                    <input class="form-check-input" name="headSize" id="headSize2" type="radio" value="h4">
+                                    <input class="form-check-input" name="headSize" id="headSize2" type="radio" value="img-h4">
                                     <label class="form-check-label" for="headSize2">
                                         <h4 class="text-bg-info p-2 bg-opacity-25 m-0">Sub heading</h4>
                                     </label>
                                 </div>
                                 <div class="form-check form-check-inline" id="headSize" onchange="generateImgTextCode()">
-                                    <input class="form-check-input" name="headSize" id="headSize3" type="radio" value="h2">
+                                    <input class="form-check-input" name="headSize" id="headSize3" type="radio" value="img-h2">
                                     <label class="form-check-label" for="headSize3">
                                         <h2 class="text-bg-uq p-2 m-0">Main heading</h2>
                                     </label>
@@ -2069,15 +2069,15 @@
                                     <div id="alertStep5">
                                     <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                     <div class="form-check form-check-inline" id="alertHeadSize" onchange="generateAlertCode()">
-                                        <input class="form-check-input" name="alertHeadSize" id="alertHeadSizeNone" type="radio" value="noH" checked>
+                                        <input class="form-check-input" name="alertHeadSize" id="alertHeadSizeNone" type="radio" value="alert-noH" checked>
                                         <label class="form-check-label" for="alertHeadSizeNone">No heading</label>
                                     </div>
                                     <div class="form-check form-check-inline" id="alertHeadSize" onchange="generateAlertCode()">
-                                        <input class="form-check-input" name="alertHeadSize" id="alertHeadSize2" type="radio" value="h4">
+                                        <input class="form-check-input" name="alertHeadSize" id="alertHeadSize2" type="radio" value="alert-h4">
                                         <label class="form-check-label" for="alertHeadSize2"><h4 class="m-0">H4 heading</h4></label>
                                     </div>
                                     <div class="form-check form-check-inline" id="alertHeadSize" onchange="generateAlertCode()">
-                                        <input class="form-check-input" name="alertHeadSize" id="alertHeadSize3" type="radio" value="h2">
+                                        <input class="form-check-input" name="alertHeadSize" id="alertHeadSize3" type="radio" value="alert-h2">
                                         <label class="form-check-label" for="alertHeadSize3"><h2 class="m-0">H2 heading</h2></label>
                                     </div>
                                 </div>
@@ -2275,15 +2275,15 @@
                         <div id="tableStep2">
                         <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                         <div class="form-check form-check-inline" id="tableHeadSize" onchange="generateTableCode()">
-                            <input class="form-check-input" name="tableHeadSize" id="tableHeadSizeNone" type="radio" value="noH" checked>
+                            <input class="form-check-input" name="tableHeadSize" id="tableHeadSizeNone" type="radio" value="table-noH" checked>
                             <label class="form-check-label" for="tableHeadSizeNone">No heading</label>
                         </div>
                         <div class="form-check form-check-inline" id="tableHeadSize" onchange="generateTableCode()">
-                            <input class="form-check-input" name="tableHeadSize" id="tableHeadSize2" type="radio" value="h4">
+                            <input class="form-check-input" name="tableHeadSize" id="tableHeadSize2" type="radio" value="table-h4">
                             <label class="form-check-label bg-info bg-opacity-25 p-2" for="tableHeadSize2"><h4 class="m-0">H4 heading</h4></label>
                         </div>
                         <div class="form-check form-check-inline" id="tableHeadSize" onchange="generateTableCode()">
-                            <input class="form-check-input" name="tableHeadSize" id="tableHeadSize3" type="radio" value="h2">
+                            <input class="form-check-input" name="tableHeadSize" id="tableHeadSize3" type="radio" value="table-h2">
                             <label class="form-check-label bg-uq text-white p-2" for="tableHeadSize3"><h2 class="m-0">H2 heading</h2></label>
                         </div>
                         </div>
@@ -2467,15 +2467,15 @@
                         <div id="accStep3">
                         <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                         <div class="form-check form-check-inline" id="accHeadSize" onchange="generateAccCode()">
-                            <input class="form-check-input" name="accHeadSize" id="accHeadSizeNone" type="radio" value="noH" checked>
+                            <input class="form-check-input" name="accHeadSize" id="accHeadSizeNone" type="radio" value="acc-noH" checked>
                             <label class="form-check-label" for="accHeadSizeNone">No heading</label>
                         </div>
                         <div class="form-check form-check-inline" id="accHeadSize" onchange="generateAccCode()">
-                            <input class="form-check-input" name="accHeadSize" id="accHeadSize2" type="radio" value="h4">
+                            <input class="form-check-input" name="accHeadSize" id="accHeadSize2" type="radio" value="acc-h4">
                             <label class="form-check-label bg-info bg-opacity-25 p-2" for="accHeadSize2"><h4 class="m-0">H4 heading</h4></label>
                         </div>
                         <div class="form-check form-check-inline" id="accHeadSize" onchange="generateAccCode()">
-                            <input class="form-check-input" name="accHeadSize" id="accHeadSize3" type="radio" value="h2">
+                            <input class="form-check-input" name="accHeadSize" id="accHeadSize3" type="radio" value="acc-h2">
                             <label class="form-check-label bg-uq text-white p-2" for="accHeadSize3"><h2 class="m-0">H2 heading</h2></label>
                         </div>
                         </div>
@@ -2624,15 +2624,15 @@
                         <div id="readmoreStep3">
                         <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                         <div class="form-check form-check-inline" id="readmoreHeadSize" onchange="generateReadmoreCode()">
-                            <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSizeNone" type="radio" value="noH" checked>
+                            <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSizeNone" type="radio" value="readmore-noH" checked>
                             <label class="form-check-label" for="readmoreHeadSizeNone">No heading</label>
                         </div>
                         <div class="form-check form-check-inline" id="readmoreHeadSize" onchange="generateReadmoreCode()">
-                            <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSize2" type="radio" value="h4">
+                            <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSize2" type="radio" value="readmore-h4">
                             <label class="form-check-label bg-info bg-opacity-25 p-2" for="readmoreHeadSize2"><h4 class="m-0">H4 heading</h4></label>
                         </div>
                         <div class="form-check form-check-inline" id="readmoreHeadSize" onchange="generateReadmoreCode()">
-                            <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSize3" type="radio" value="h2">
+                            <input class="form-check-input" name="readmoreHeadSize" id="readmoreHeadSize3" type="radio" value="readmore-h2">
                             <label class="form-check-label bg-uq text-white p-2" for="readmoreHeadSize3"><h2 class="m-0">H2 heading</h2></label>
                         </div>
                         </div>
