--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -2249,7 +2249,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row my-2">
                     <div class="col-lg">
                         <div class="alert alert-danger border border-3 border-danger rounded mx-auto d-block tableAlert">
                             <h3 class="text-center"><i class="fa-solid fa-circle-exclamation"></i> Stop and Read! How to use this table generator when pasting a table</h3>
@@ -2433,7 +2433,7 @@
                         </div>
                     </div>
                 </div> 
-                <div class="row w-75 mx-auto mt-2">
+                <div class="row w-75 mx-auto my-2">
                     <div class="col">
                         <div class="alert alert-danger border border-3 border-danger rounded mx-auto d-block accAlert">
                             <h3 class="text-center"><i class="fa-solid fa-circle-exclamation"></i> Stop and Read! How and when to use accordions</h3>
