--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -503,6 +503,8 @@
                 fullScreenAlertToggle();
                 fullScreenTooltipToggle();
                 fullScreenAccToggle();
+                fullScreenTableToggle();
+                fullScreenReadmoreToggle();
             });
             $(function() {
                 var accNameTxt = $("#accName");
@@ -1159,7 +1161,7 @@
                         <h5 class="text-center">How to create a Responsive Image in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create a responsive image in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/e4058f2b-dcff-461e-bec5-9e7f2a5bac0e/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div>
@@ -1389,7 +1391,7 @@
                         <h5 class="text-center">How to create a Responsive Video in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create a responsive video in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/5db3772b-e00e-4c37-b754-57ad8fb1fc4e/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div>
@@ -1584,7 +1586,7 @@
                         <h5 class="text-center">How to create a Button in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create a button in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/b59e5e49-d39c-4199-a635-9fae5ce6b7f0/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div>
@@ -1951,14 +1953,14 @@
             </div>
             <!--Start alert builder-->
             <div class="tab-pane fade" id="buildAlert" role="tabpanel">
-                <h1 class="text-center">Alert builder</h1>
+                <h1 class="text-center">Alert/Quote builder</h1>
                 <a class="btn btn-primary btn-sm d-block mx-auto text-center w-50 demoToggle" type="button" data-bs-toggle="collapse" data-bs-target="#createAlertDemo" aria-expanded="false" aria-controls="createAlertDemo">How do I make an alert or quote? Click to reveal a video demonstration <i class="fa-solid fa-angle-down"></i></a>
                 <div class="collapse mt-2 w-75 mx-auto" id="createAlertDemo">
                     <div class="card card-body w-50 mx-auto d-block">
                         <h5 class="text-center">How to create an Alert or Quote in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create an alert or quote in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/434f386c-9cb2-43b7-9e13-b8ce9eb8f7e6/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div>
@@ -2167,7 +2169,7 @@
                         <h5 class="text-center">How to create an Tooltip in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create a tooltip in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/d7d9f958-65bf-4ec6-95ce-70a5128f194d/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div>
@@ -2237,7 +2239,7 @@
                         <h5 class="text-center">How to create a Table in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create a table in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/d76c3c97-9827-4101-8ed8-162be3565dbf/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div>
@@ -2425,7 +2427,7 @@
                         <h5 class="text-center">How to create an Accordion in the Code Centre</h5>
                         <p>The video below is a short demonstration on how to create an accordion in the code centre. Click the button above to collapse this content and continue working.</p>
                         <div class="ratio ratio-16x9">
-                            <iframe src=""></iframe>
+                            <iframe allowfullscreen frameborder=0 src="https://echo360.net.au/media/50d117fa-5c73-4bc2-a0d0-7f0c63270016/public?autoplay=false&automute=false"></iframe>
                         </div>
                     </div>
                 </div> 
@@ -2601,7 +2603,7 @@
                     <h5 class="text-center">How to create a Read More button in the Code Centre</h5>
                     <p>The video below is a short demonstration on how to create a Read More button in the code centre. Click the button above to collapse this content and continue working.</p>
                     <div class="ratio ratio-16x9">
-                        <iframe src=""></iframe>
+                        <iframe height="420" width="640" allowfullscreen frameborder=0 src="https://echo360.net.au/media/04984b72-655a-4f6b-a90b-76cc2669090c/public?autoplay=false&automute=false"></iframe>
                     </div>
                 </div>
             </div>
